--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
        <section class="mt-12 px-6 lg:px-0 container mx-auto">
         <h2 class="text-4xl font-semibold text-green-primary">Arrival & Offers</h2>
 
-        <div class="lg:flex gap-4 mt-8 space-y-4">
+        <div class="lg:flex gap-4 mt-8 space-y-4 font-poppins">
           <div class="flex justify-between items-center bg-back-section rounded-xl lg:mt-4">
             <div class="space-y-6 p-6">
               <img src="/Assignment_03_Category_0002/c2-assets/dawat-logo.png" alt="">
